set05/problem01_compile_errors.txt
Compilation started at 11/14/2023, 4:52:11 PM
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\set05\problem01.c: In function 'main':
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\set05\problem01.c:39:17: error: expected expression before 'Point'
   39 |     scanf("%d",&Point.a);
      |                 ^~~~~
Compilation finished at 11/14/2023, 4:52:11 PM
Compilation started at 11/14/2023, 4:52:26 PM
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\set05\problem01.c: In function 'main':
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\set05\problem01.c:39:16: error: expected expression before 'Point'
   39 |     scanf("%d",Point.a);
      |                ^~~~~
Compilation finished at 11/14/2023, 4:52:26 PM
Compilation started at 11/16/2023, 8:47:32 PM
Compilation finished at 11/16/2023, 8:47:32 PM
Compilation started at 11/16/2023, 8:49:55 PM
Compilation finished at 11/16/2023, 8:49:56 PM
